[package]
name = "markdown2unicode"
version = "0.1.0"
edition = "2021"
description = "Converter from markdown notation to unicode characters"
license = "GPL-3.0-only"
repository = "https://github.com/qtfkwk/markdown2unicode"

[dependencies]
clap = { version = "4.3.23", features = ["derive", "wrap_help"] }
lazy_static = "1.4.0"

